# rust-lambda

./: README.md  samconfig.toml  template.yaml
.aws-sam/: build.toml
.aws-sam/cache/af054cdb-a4f4-43ad-85a9-c06cf96bcc52/: bootstrap
rust_app/: Cargo.toml
rust_app/src/: main.rs
